--- a/questions/00.md
+++ b/questions/00.md
@@ -4,14 +4,14 @@ quiz_id: 19089
 id: 120545
 type: multiple_choice_question
 sources:
-- name: Defining Object-Relational Mapping
-  url: https://learning.flatironschool.com/courses/3299/pages/defining-object-relational-mapping?module_item_id=143883
+  - name: Defining Object-Relational Mapping
+    url: https://learning.flatironschool.com/courses/3299/pages/defining-object-relational-mapping
 ---
 
 # ORM: Basics
 
 Object Relational Mapping (ORM) is the technique of accessing a relational
-database using what type of programming language?
+database using what type of programming language? Choose the **best** answer.
 
 ## Correct
 
