--- a/questions/02.md
+++ b/questions/02.md
@@ -4,29 +4,27 @@ quiz_id: 19089
 id: 120548
 type: multiple_choice_question
 sources:
-- name: Mapping Ruby Classes to a Database
-  url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
+  - name: Mapping Ruby Classes to a Database
+    url: https://learning.flatironschool.com/courses/3299/assignments/133607
 ---
 
 # ORM: Mapping
 
 Consider the following code:
 
-```
+```rb
 class Car
-
   attr_accessor :make, :model
 
   def initialize(make, model)
     @make = make
     @model = model
   end
-
 end
 ```
 
-In order to "map" this&nbsp;`Car`&nbsp;class to a&nbsp;`cars`&nbsp;database
-table, what needs to be done first?
+In order to "map" this `Car` class to a `cars` database table, what needs to be
+done first?
 
 ## Correct
 
@@ -36,13 +34,13 @@ Create a database
 
 ## Incorrect
 
-Create a&nbsp;`cars`&nbsp;table
+Create a `cars` table
 
 > We actually need something else first. What stores tables?
 
 ## Incorrect
 
-Make a&nbsp;`.create_table`&nbsp;method
+Make a `.create_table` method
 
 > But where would the table be created?
 
