--- a/questions/03.md
+++ b/questions/03.md
@@ -1,52 +1,48 @@
 ---
 course_id: 3299
 quiz_id: 19089
-id: 120550
-type: multiple_choice_question
+id: 120551
+type: multiple_answers_question
 sources:
-- name: Mapping Ruby Classes to a Database
-  url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
+  - name: Mapping Ruby Classes to a Database
+    url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
 ---
 
-# ORM: Mapping
+# Question 5
 
-To set a constant that contains a connection to a database, which syntax should be used?
+What are the steps needed to write a class that is mapped to a database table?
+Select **all** that apply.
 
 ## Correct
 
-```
-DB = {:conn => SQLite3::Database.new("db/database.db")}
-```
+Create a table with the same name as the class, but pluralized
 
-> Correct! We set up a constant, DB, that is equal to a hash that contains our
-> connection to the database.
+> Exactly! If the class is called Cat, the table should be called cats.
 
-## Incorrect
+## Correct
 
-```
-DB = {:conn => SQLite3::Database("db/database.db")}
-```
+Match the names of the table's columns to the attributes (declared with
+`attr_accessor`) of the class
 
-> Almost. We haven't created an instance of the Database.
+> So true! We need the columns and attributes to match, so that we know which
+> data we're manipulating.
 
 ## Incorrect
 
-```
-db = {:conn => SQLite3::Database.new("db/database.db")}
-```
+Match the names of the table's columns to class variables
 
-> Not quite. How do we declare a constant?
-
-## Incorrect
-
-```
-DB = {conn => SQLite3::Database.new("db/database.db")}
-```
-
-> This will actually produce an error: `undefined local variable or method conn`.
+> Not quite. Remember that each row in the table is represented by an object, or
+> an instance of a class. What might that mean?
 
 ## Incorrect
 
-I don't know.
+Create a table with the exact same name as the class
+
+> Not quite. The table name and class name should be similar, but not exactly the
+> same.
+
+## Incorrect
+
+I don't know
 
 > Be sure to study the source/s for this question. You'll get it next time.
