--- a/questions/04.md
+++ b/questions/04.md
@@ -1,47 +1,99 @@
 ---
 course_id: 3299
 quiz_id: 19089
-id: 120551
-type: multiple_answers_question
+id: 120552
+type: multiple_choice_question
 sources:
-- name: Mapping Ruby Classes to a Database
-  url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
+  - name: Mapping Ruby Classes to a Database
+    url: https://learning.flatironschool.com/courses/3299/assignments/133607
 ---
 
-# Question 5
+# ORM: Mapping
 
-How do we map a class to a database's table? (Select **all** that apply)
+Consider a table with the following columns:
+
+```txt
+| id | make | model |
+```
+
+Which code snippet creates a class with instance methods mapped to these table
+columns, following ORM conventions?
 
 ## Correct
 
-Create a table with the same name as the class but pluralized
+```rb
+class Car
 
-> Exactly! If the class is called Cat, the table should be called cats.
+  attr_accessor :make, :model, :id
 
-## Correct
+  def initialize(make, model, id=nil)
+    @id = id
+    @make = make
+    @model = model
+  end
 
-Match the names of the table's columns to the attributes (declared with
-attr\_accessor) of the class
+end
+```
 
-> So true! We need the columns and attributes to match, so that we know which data
-> we're manipulating.
-
-## Incorrect
-
-Match the names of the table's columns to class variables
-
-> Not quite. Remember that each row in the table is represented by an object, or
-> an instance of a class. What might that mean?
+> Correct! All of the attributes have setters and getters, and the id is set to
+> `nil` because it should only be set after the record is saved to the database.
 
 ## Incorrect
 
-Create a table with the exact same name as the class
+```rb
+class Car
 
-> Not quite. The table name and class name should be similar, but not exactly the
-> same.
+  attr_accessor :make, :model, :id
+
+  def initialize(make, model, id)
+    @id = id
+    @make = make
+    @model = model
+  end
+
+end
+```
+
+> Hmm, something is missing. Take a look at the id. The id shouldn't be saved
+> until after the record has been saved to the database.
 
 ## Incorrect
 
-I don't know
+```rb
+class Car
+
+  def initialize(make, model, id=nil)
+    @id = id
+    @make = make
+    @model = model
+  end
+
+end
+```
+
+> Something is not quite right. How can we get and set the attributes (e.g. id,
+> make, model) on an instance?
+
+## Incorrect
+
+```rb
+class Car
+
+  def initialize(make, model, id)
+    @id = id
+    @make = make
+    @model = model
+  end
+
+end
+```
+
+> There are a couple things wrong here. We are forgetting to do something with the
+> id, and we have no way of accessing the attributes on an instance. How can we
+> fix this?
+
+## Incorrect
+
+I don't know.
 
 > Be sure to study the source/s for this question. You'll get it next time.
