--- a/questions/05.md
+++ b/questions/05.md
@@ -1,95 +1,45 @@
 ---
 course_id: 3299
 quiz_id: 19089
-id: 120552
-type: multiple_choice_question
+id: 120553
+type: multiple_answers_question
 sources:
-- name: Mapping Ruby Classes to a Database
-  url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
+  - name: Mapping Ruby Classes to a Database
+    url: https://learning.flatironschool.com/courses/3299/assignments/133607
 ---
 
 # ORM: Mapping
 
-Consider the following columns:
-
-```
-| id | make | model |
-```
-
-Which code snippet creates a class with instance methods mapped to these table
-columns, following ORM conventions?
+Why do we use a dedicated method (`#save`) to insert a row into a table instead
+of saving the record in `#initialize`?
 
 ## Correct
 
-```
-class Car
+We don't want to couple the creation of objects with saving records to a
+database
 
-  attr_accessor :make, :model, :id
+> Yes! This makes our code more modular, so we can choose to create objects or
+> save to the database. This is much more flexible than coupling both functions in
+> the same method.
 
-  def initialize(make, model, id=nil)
-    @id = id
-    @make = make
-    @model = model
-  end
+## Correct
 
-end
-```
+We might need to create objects without saving them to the database
 
-> Correct! All of the attributes have setters and getters, and the id is set to
-> `nil` because it should only be set after the record is saved to the database.
+> Exactly! We may need to manipulate those objects after certain tasks have run,
+> and then save them.
 
 ## Incorrect
 
-```
-class Car
+We can't set the attributes and save the record in the same method
 
-  attr_accessor :make, :model, :id
-
-  def initialize(make, model, id)
-    @id = id
-    @make = make
-    @model = model
-  end
-
-end
-```
-
-> Hmm, something is missing. Take a look at the id. Do you notice anything?
+> Not quite. We can do both of these things in a method if we want.
 
 ## Incorrect
 
-```
-class Car
+There's no real reason. It's just a convention
 
-  def initialize(make, model, id=nil)
-    @id = id
-    @make = make
-    @model = model
-  end
-
-end
-```
-
-> Something is not quite right. How can we get and set the attributes (e.g. id,
-> make, model) on an instance?
-
-## Incorrect
-
-```
-class Car
-
-  def initialize(make, model, id)
-    @id = id
-    @make = make
-    @model = model
-  end
-
-end
-```
-
-> There are a couple things wrong here. We are forgetting to do something with the
-> id, and we have no way of accessing the attributes on an instance. How can we
-> fix this?
+> We do have reasons, though this is a convention.
 
 ## Incorrect
 
