--- a/questions/01.md
+++ b/questions/01.md
@@ -4,39 +4,33 @@ quiz_id: 19089
 id: 120547
 type: multiple_choice_question
 sources:
-- name: Defining Object-Relational Mapping
-  url: https://learning.flatironschool.com/courses/3299/pages/defining-object-relational-mapping?module_item_id=143883
+  - name: Defining Object-Relational Mapping
+    url: https://learning.flatironschool.com/courses/3299/pages/defining-object-relational-mapping?module_item_id=143883
 ---
 
 # ORM: Basics
 
-To follow a pattern of&nbsp;_logical design_, if we have
-a&nbsp;`Car`&nbsp;class, what should the table be named?
+To follow a pattern of _logical design_, if we have a `Car` Ruby class, what
+should the corresponding SQL table be named?
 
 ## Correct
 
-```
-cars
-```
+`cars`
 
 > Perfect! The table holds many cars, so it makes sense to call it cars.
 
 ## Incorrect
 
-```
-car
-```
+`car`
 
 > Not quite. Does the table hold one car or many?
 
 ## Incorrect
 
-```
-vehicle
-```
+`vehicle`
 
 > Not quite. Conventionally, our table names and class names use matching
-> terminology, except one is named singularly and the other is pluralized.
+> terminology, except one is singular and the other is plural.
 
 ## Incorrect
 
