--- a/questions/06.md
+++ b/questions/06.md
@@ -1,48 +1,38 @@
 ---
 course_id: 3299
 quiz_id: 19089
-id: 120553
-type: multiple_answers_question
+id: 149626
+type: matching_question
 sources:
-- name: Mapping Ruby Classes to a Database
-  url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
+  - name: Defining Object-Relational Mapping
+    url: https://learning.flatironschool.com/courses/3299/pages/defining-object-relational-mapping
 ---
 
-# ORM: Mapping
+# Question
 
-Why do we use a dedicated method (`#save`) to insert a row into a table instead
-of saving the record in `#initialize`?
-
-## Correct
-
-We don't want to couple the creation of objects with saving records to a
-database
-
-> Yes! This makes our code more modular, so we can choose to create objects or
-> save to the database. This is much more flexible than coupling both functions in
-> the same method.
+How does an ORM (Object-Relational Map) map between our object-oriented code and
+a database table? Match each OO concept to the corresponding database structure:
 
 ## Correct
 
-We might need to create objects without saving them to the database
+- Class
+- Database table
 
-> Exactly! We may need to manipulate those objects after certain tasks have run,
-> and then save them.
+## Correct
+
+- Instance of a class
+- Table row
+
+## Correct
+
+- Attribute belonging to a class
+- Table column
+
+## Correct
+
+- Value of an attribute for an instance of a class
+- Table cell
 
 ## Incorrect
 
-We can't set the attributes and save the record in the same method
-
-> Not quite. We can do both of these things in a method if we want.
-
-## Incorrect
-
-There's no real reason. It's just a convention
-
-> We do have reasons, though this is a convention.
-
-## Incorrect
-
-I don't know.
-
-> Be sure to study the source/s for this question. You'll get it next time.
+- I don't know.
