Add missing source

--- a/questions/07.md
+++ b/questions/07.md
@@ -3,7 +3,9 @@ course_id: 3299
 quiz_id: 19089
 id: 149627
 type: multiple_choice_question
-sources: []
+sources:
+  - name: Mapping Ruby Classes to a Database
+    url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
 ---
 
 # Question
