--- a/questions/01.md
+++ b/questions/01.md
@@ -1,16 +1,16 @@
 ---
-course_id: 3299
-quiz_id: 19089
-id: 120547
+course_id: 7559
+quiz_id: 53500
+id: 366047
 type: multiple_choice_question
 sources:
-  - name: Defining Object-Relational Mapping
-    url: https://learning.flatironschool.com/courses/3299/pages/defining-object-relational-mapping?module_item_id=143883
+- name: Defining Object-Relational Mapping
+  url: "/courses/7559/pages/defining-object-relational-mapping?module_item_id=629291"
 ---
 
 # ORM: Basics
 
-To follow a pattern of _logical design_, if we have a `Car` Ruby class, what
+To follow a pattern of _logical design_, if we have a `Car` Python class, what
 should the corresponding SQL table be named?
 
 ## Correct
