--- a/questions/03.md
+++ b/questions/03.md
@@ -1,11 +1,11 @@
 ---
-course_id: 3299
-quiz_id: 19089
-id: 120551
+course_id: 7559
+quiz_id: 53500
+id: 366049
 type: multiple_answers_question
 sources:
-  - name: Mapping Ruby Classes to a Database
-    url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
+- name: Mapping Database Records to Python Objects
+  url: "/courses/7559/pages/v1-mapping-database-records-to-python-objects?module_item_id=g1ba1cadbb4dc31c512d279075f02de30"
 ---
 
 # Question 5
@@ -21,11 +21,10 @@ Create a table with the same name as the class, but pluralized
 
 ## Correct
 
-Match the names of the table's columns to the attributes (declared with
-`attr_accessor`) of the class
+Match the names of the table's columns to the attributes&nbsp;of the class
 
-> So true! We need the columns and attributes to match, so that we know which
-> data we're manipulating.
+> So true! We need the columns and attributes to match, so that we know which data
+> we're manipulating.
 
 ## Incorrect
 
