--- a/questions/05.md
+++ b/questions/05.md
@@ -1,17 +1,17 @@
 ---
-course_id: 3299
-quiz_id: 19089
-id: 120553
+course_id: 7559
+quiz_id: 53500
+id: 366051
 type: multiple_answers_question
 sources:
-  - name: Mapping Ruby Classes to a Database
-    url: https://learning.flatironschool.com/courses/3299/assignments/133607
+- name: Mapping Python Classes to a Database
+  url: "/courses/7559/assignments/263663?module_item_id=gc7052c1ec73a632ce1c697cca3431680"
 ---
 
 # ORM: Mapping
 
-Why do we use a dedicated method (`#save`) to insert a row into a table instead
-of saving the record in `#initialize`?
+Why do we use a dedicated method `save()` to insert a row into a table instead
+of saving the record in ` __init__ `?
 
 ## Correct
 
