--- a/questions/06.md
+++ b/questions/06.md
@@ -1,14 +1,14 @@
 ---
-course_id: 3299
-quiz_id: 19089
-id: 149626
+course_id: 7559
+quiz_id: 53500
+id: 366052
 type: matching_question
 sources:
-  - name: Defining Object-Relational Mapping
-    url: https://learning.flatironschool.com/courses/3299/pages/defining-object-relational-mapping
+- name: Defining Object-Relational Mapping
+  url: "/courses/7559/pages/defining-object-relational-mapping"
 ---
 
-# Question
+# ORM: Mapping
 
 How does an ORM (Object-Relational Map) map between our object-oriented code and
 a database table? Match each OO concept to the corresponding database structure:
@@ -32,7 +32,3 @@ a database table? Match each OO concept to the corresponding database structure:
 
 - Value of an attribute for an instance of a class
 - Table cell
-
-## Incorrect
-
-- I don't know.
