--- a/questions/07.md
+++ b/questions/07.md
@@ -1,16 +1,16 @@
 ---
-course_id: 3299
-quiz_id: 19089
-id: 149627
+course_id: 7559
+quiz_id: 53500
+id: 366053
 type: multiple_choice_question
 sources:
-  - name: Mapping Ruby Classes to a Database
-    url: https://learning.flatironschool.com/courses/3299/assignments/133607?module_item_id=277032
+- name: Mapping Python Classes to a Database
+  url: "/courses/7559/assignments/263663?module_item_id=gc7052c1ec73a632ce1c697cca3431680"
 ---
 
-# Question
+# Question 1
 
-Using an ORM enables us to save entire Ruby objects in our database.
+Using an ORM enables us to save entire Python objects in our database.
 
 ## Incorrect
 
@@ -24,8 +24,8 @@ True
 
 False
 
-> Right! We are not able to save the object itself into our database; instead,
-> we are saving the **data** from the **attributes** of that object.
+> Right! We are not able to save the object itself into our database; instead, we
+> are saving the **data** from the **attributes** of that object.
 
 ## Incorrect
 
