--- a/questions/08.md
+++ b/questions/08.md
@@ -1,14 +1,14 @@
 ---
-course_id: 3299
-quiz_id: 19089
-id: 149628
+course_id: 7559
+quiz_id: 53500
+id: 366054
 type: multiple_answers_question
 sources:
-  - name: Defining Object-Relational Mapping
-    url: https://learning.flatironschool.com/courses/3299/pages/defining-object-relational-mapping
+- name: Defining Object-Relational Mapping
+  url: "/courses/7559/pages/defining-object-relational-mapping"
 ---
 
-# Question
+# Question 2
 
 Which of the following are advantages of using an ORM? Select all that apply.
 
@@ -16,14 +16,14 @@ Which of the following are advantages of using an ORM? Select all that apply.
 
 It allows us to abstract common database tasks into methods.
 
-> Right! Abstraction is a very powerful tool that can make it much easier to
-> grow our applications.
+> Right! Abstraction is a very powerful tool that can make it much easier to grow
+> our applications.
 
 ## Correct
 
 It cuts down on repetitive code.
 
-> Right! It's quite convenient to have a Ruby class that knows how to insert
+> Right! It's quite convenient to have a Python class that knows how to insert
 > records into SQL rather than having to write that code out by hand.
 
 ## Correct
