--- a/questions/02.md
+++ b/questions/02.md
@@ -1,26 +1,22 @@
 ---
-course_id: 3299
-quiz_id: 19089
-id: 120548
+course_id: 7559
+quiz_id: 53500
+id: 366048
 type: multiple_choice_question
 sources:
-  - name: Mapping Ruby Classes to a Database
-    url: https://learning.flatironschool.com/courses/3299/assignments/133607
+- name: Mapping Database Records to Python Objects
+  url: "/courses/7559/pages/v1-mapping-database-records-to-python-objects?module_item_id=g1ba1cadbb4dc31c512d279075f02de30"
 ---
 
 # ORM: Mapping
 
 Consider the following code:
 
-```rb
-class Car
-  attr_accessor :make, :model
-
-  def initialize(make, model)
-    @make = make
-    @model = model
-  end
-end
+```ruby
+class Car:
+  def __init__ (self, make, model):
+    self.make = make
+    self.model = model
 ```
 
 In order to "map" this `Car` class to a `cars` database table, what needs to be
@@ -37,12 +33,6 @@ Create a database
 Create a `cars` table
 
 > We actually need something else first. What stores tables?
-
-## Incorrect
-
-Make a `.create_table` method
-
-> But where would the table be created?
 
 ## Incorrect
 
