--- a/questions/04.md
+++ b/questions/04.md
@@ -1,18 +1,18 @@
 ---
-course_id: 3299
-quiz_id: 19089
-id: 120552
+course_id: 7559
+quiz_id: 53500
+id: 366050
 type: multiple_choice_question
 sources:
-  - name: Mapping Ruby Classes to a Database
-    url: https://learning.flatironschool.com/courses/3299/assignments/133607
+- name: Mapping Python Classes to a Database
+  url: "/courses/7559/assignments/263663?module_item_id=gc7052c1ec73a632ce1c697cca3431680"
 ---
 
 # ORM: Mapping
 
 Consider a table with the following columns:
 
-```txt
+```plaintext
 | id | make | model |
 ```
 
@@ -21,76 +21,29 @@ columns, following ORM conventions?
 
 ## Correct
 
-```rb
-class Car
+```ruby
+class Car:
 
-  attr_accessor :make, :model, :id
-
-  def initialize(make, model, id=nil)
-    @id = id
-    @make = make
-    @model = model
-  end
-
-end
+  def __init__ (self, make, model):
+    self.id = None    self.make = make
+    self.model = model
 ```
 
-> Correct! All of the attributes have setters and getters, and the id is set to
-> `nil` because it should only be set after the record is saved to the database.
+> Correct! The id is set to `None` because it should only be set after the record
+> is saved to the database.
 
 ## Incorrect
 
-```rb
-class Car
-
-  attr_accessor :make, :model, :id
-
-  def initialize(make, model, id)
-    @id = id
-    @make = make
-    @model = model
-  end
-
-end
+```ruby
+class Car:
+  def __init__ (self, make, model, id):
+    self.id = id
+    self.make = make
+    self.model = model
 ```
 
 > Hmm, something is missing. Take a look at the id. The id shouldn't be saved
 > until after the record has been saved to the database.
-
-## Incorrect
-
-```rb
-class Car
-
-  def initialize(make, model, id=nil)
-    @id = id
-    @make = make
-    @model = model
-  end
-
-end
-```
-
-> Something is not quite right. How can we get and set the attributes (e.g. id,
-> make, model) on an instance?
-
-## Incorrect
-
-```rb
-class Car
-
-  def initialize(make, model, id)
-    @id = id
-    @make = make
-    @model = model
-  end
-
-end
-```
-
-> There are a couple things wrong here. We are forgetting to do something with the
-> id, and we have no way of accessing the attributes on an instance. How can we
-> fix this?
 
 ## Incorrect
 
